<resources>
    <string name="app_name">STUDENT COMPANION APP</string>
    <string name="Password">Password</string>
    <string name="Button">Button</string>
    <string name="Username">Username</string>
    <string name="Registration">Registration</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Em">My Courses</string>
    <string name="Select_Role">Select_Role</string>
    <string name="Select_Number">Student_Number</string>
    <string name="select_Program">Select_Program</string>
    <string name="register">REGISTER</string>
    <string name="if_you_already_have_an_account_click_here">If you already have an account click here</string>
    <string name="student_number">Student_Number</string>
    <string name="if_you_don_t_have_an_account_click_here">If you don\'t have an account click here</string>
    <string name="Board">Dash Board</string>
    <string name="mulungushi_university">MULUNGUSHI UNIVERSITY</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="dashboard">Dashboard</string>
    <string name="module_links">Module Links</string>
    <string name="semester_1">Semester 1</string>
    <string name="my_courses">My Courses</string>
    <string name="ict_361">ICT_361</string>
    <string name="_75_done">75% Done</string>
    <string name="mobile_application_development">Mobile Application Development</string>
    <string name="view_course">View Course →</string>
    <string name="ict_341">ICT_341</string>
    <string name="_90_done">90% Done</string>
    <string name="database_systems">Database Systems</string>
    <string name="semester_2">Semester 2</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="ict_351">ICT_351</string>
    <string name="_60_done">60% Done</string>
    <string name="_3_active">3 Active</string>
    <string name="lecturer_id">Lecturer_id</string>
    <string name="profile">Profile</string>
    <string name="profil">Profile</string>
    <string name="personal_details">PERSONAL_DETA</string>
    <string name="action_needed">Action Needed</string>
    <string name="back">Back</string>
    <string name="_2_items">2 Items</string>
    <string name="pending_approvals_amp_assignments"><![CDATA[Pending Approvals & Assignments]]></string>
    <string name="mulungushi_uni">MULUNGUSHI UNIVERSITY</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="student_id_20210005_bsc_cs_3rd_year">Student ID: 20210005 • BSc. CS (3rd Year)</string>
    <string name="assign_to_project_group">Assign to Project Group:</string>
    <string name="assign_student_to_group">Assign Student to Group</string>
    <string name="select_group_e_g_group_a">Select Group (e.g. Group A)...</string>
    <string name="student_id_20210004_bsc_it_1st_year">Student ID: 20210004 • BSc. IT (1st Year)</string>
    <string name="sarah_tembo">SARAH TEMBO</string>
    <string name="pending">PENDING</string>
    <string name="registration_approval">Registration Approval</string>
    <string name="name_or_student_id">Name or Student ID...</string>
    <string name="search">Search</string>
    <string name="chat">CHAT</string>
    <string name="student_id_20210001">Student ID: 20210001</string>
    <string name="you_are_offline">you are offline</string>
    <string name="name">NAME</string>
    <string name="Back">Back</string>
    <string name="student_profile">Student Profile</string>
    <string name="john_phiri">JOHN PHIRI</string>
    <string name="t">Student ID: 20210001</string>


</resources>